docs/envoy/v1.6.0/_sources/api-v2/config/filter/network/redis_proxy/v2/redis_proxy.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/network/redis_proxy/v2/redis_proxy.proto:

Redis Proxy
===========

Redis Proxy :ref:`configuration overview <config_network_filters_redis_proxy>`.

.. _envoy_api_msg_config.filter.network.redis_proxy.v2.RedisProxy:

config.filter.network.redis_proxy.v2.RedisProxy
-----------------------------------------------

`[config.filter.network.redis_proxy.v2.RedisProxy proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/network/redis_proxy/v2/redis_proxy.proto#L13>`_


.. code-block:: json

  {
    "stat_prefix": "...",
    "cluster": "...",
    "settings": "{...}"
  }

.. _envoy_api_field_config.filter.network.redis_proxy.v2.RedisProxy.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The prefix to use when emitting :ref:`statistics <config_network_filters_redis_proxy_stats>`.
  
  
.. _envoy_api_field_config.filter.network.redis_proxy.v2.RedisProxy.cluster:

cluster
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Name of cluster from cluster manager. See the :ref:`configuration section
  <arch_overview_redis_configuration>` of the architecture overview for recommendations on
  configuring the backing cluster.
  
  
.. _envoy_api_field_config.filter.network.redis_proxy.v2.RedisProxy.settings:

settings
  (:ref:`config.filter.network.redis_proxy.v2.RedisProxy.ConnPoolSettings <envoy_api_msg_config.filter.network.redis_proxy.v2.RedisProxy.ConnPoolSettings>`, *REQUIRED*) Network settings for the connection pool to the upstream cluster.
  
  
.. _envoy_api_msg_config.filter.network.redis_proxy.v2.RedisProxy.ConnPoolSettings:

config.filter.network.redis_proxy.v2.RedisProxy.ConnPoolSettings
----------------------------------------------------------------

`[config.filter.network.redis_proxy.v2.RedisProxy.ConnPoolSettings proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/network/redis_proxy/v2/redis_proxy.proto#L23>`_

Redis connection pool settings.

.. code-block:: json

  {
    "op_timeout": "{...}"
  }

.. _envoy_api_field_config.filter.network.redis_proxy.v2.RedisProxy.ConnPoolSettings.op_timeout:

op_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Per-operation timeout in milliseconds. The timer starts when the first
  command of a pipeline is written to the backend connection. Each response received from Redis
  resets the timer since it signifies that the next command is being processed by the backend.
  The only exception to this behavior is when a connection to a backend is not yet established.
  In that case, the connect timeout on the cluster will govern the timeout until the connection
  is ready.
  
  


